--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "kafkajs": "^2.2.4",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
